Fix horizontal scroll on contact us

--- a/static/css/responsive.css
+++ b/static/css/responsive.css
@@ -16,6 +16,7 @@
 #blog_main,
 #all_about_us,
 #klab-map,
+#kLab-guide,
 #about_detail,
 input.form-control,
 textarea.form-control,
