--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1455,7 +1455,7 @@ div.panel-collapse.collapse {
 .contact-map-title, .contact-guide-title {
     margin-bottom: 15px;
 }
-#klab-map{
+#klab-map,#kLab-guide{
     width: 400px;
 }
 iframe {
